# vqe_lightning

./: .gitignore  .pre-commit-config.yaml  Molecule_mapping.txt  README.md  pyproject.toml  requirements.txt
molecules/: LiH.xyz  LiH.yaml
paper/: paper.typ  references.bib
src/app/: __main__.py  adapt_vqe_module.py  base_module.py  data_module.py  lightning_manager.py  logging_config.py  mnist_module.py  settings.py  steps_data_module.py  trainer.py  uccsd_vqe_module.py  vqe_module.py
src/app/chem/: hamiltonians.py  molecule_specs.py
src/app/vqe/: adapt_vqe_module.py  base_module.py  uccsd_vqe_module.py
